# busbarAI

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  RELEASE.md  SECURITY.md  THREAT_MODEL.md  config.example.yaml  config.yaml  continue.md  deny.toml  providers.yaml
api/: Cargo.toml
api/src/: auth.rs  hooks.rs  lib.rs
auth/admin-tokens/: Cargo.toml
auth/admin-tokens/src/: lib.rs
crates/auth-admin-tokens/: Cargo.toml
crates/auth-oidc/: Cargo.toml
crates/auth-oidc-plugin/: Cargo.toml
crates/auth-oidc-plugin/src/: lib.rs
crates/auth-oidc/src/: cache.rs  jwks.rs  jwt.rs  lib.rs  reqwest_fetcher.rs  tests.rs
crates/auth-static-plugin/: Cargo.toml
crates/auth-static-plugin/src/: lib.rs
crates/auth-tokens/: Cargo.toml
crates/auth-tokens/src/: lib.rs
crates/busbar/: Cargo.toml
crates/busbar/src/: auth_cache.rs  breaker.rs  cost.rs  endpoints.rs  eventstream.rs  health.rs  json.rs  limits.rs  main.rs  media.rs  metrics.rs  net_guard.rs  observability.rs  plugin_trust.rs  profile.rs  sigv4.rs  state.rs  state_persist.rs  telemetry.rs  tls.rs
crates/busbar/src/admin/: audit.rs  mod.rs  versions.rs
crates/busbar/src/admin/tests/: tests.rs
crates/busbar/src/admin/v1/: mod.rs  service.rs
crates/busbar/src/admin/v1/contract/: mod.rs  schema.rs
crates/busbar/src/admin/v1/json/: handlers.rs  mod.rs  openapi.json
crates/busbar/src/auth/: mod.rs
crates/busbar/src/auth/tests/: plugin_chain_tests.rs  tests.rs
crates/busbar/src/config/: groups.rs  migrate.rs  mod.rs  overlay.rs  secret.rs
crates/busbar/src/config/tests/: migrate_tests.rs  tests.rs
crates/busbar/src/config_validate/: mod.rs
crates/busbar/src/config_validate/tests/: tests.rs
crates/busbar/src/egress_auth/: bearer_token.rs  jwt_bearer.rs  mod.rs  oauth_client_credentials.rs
crates/busbar/src/egress_auth/tests/: license_tests.rs
crates/busbar/src/governance/: mod.rs  signing.rs  state.rs
crates/busbar/src/governance/tests/: limits_tests.rs  tests.rs
crates/busbar/src/handlers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/busbar/src/hooks/: mod.rs  plugin.rs  scrape.rs  socket.rs  webhook.rs  wire.rs
crates/busbar/src/hooks/tests/: scrape_tests.rs  tests.rs
crates/busbar/src/ingress/: dispatch.rs  mod.rs
crates/busbar/src/ingress/tests/: tests.rs
crates/busbar/src/ir/: mod.rs  rerank.rs  variant.rs
crates/busbar/src/proto/: mod.rs  openai_family.rs  stream.rs
crates/busbar/src/proto/anthropic/: mod.rs  writer.rs
crates/busbar/src/proto/anthropic/tests/: anthropic_hardening_tests.rs  user_and_parallelism_carry_tests.rs
crates/busbar/src/proto/bedrock/: mod.rs  reader.rs  writer.rs
crates/busbar/src/proto/bedrock/tests/: tests.rs
crates/busbar/src/proto/cohere/: mod.rs  reader.rs  writer.rs
crates/busbar/src/proto/cohere/tests/: tests.rs
crates/busbar/src/proto/gemini/: mod.rs  reader.rs  writer.rs
crates/busbar/src/proto/gemini/tests/: tests.rs
crates/busbar/src/proto/openai_chat/: mod.rs  reader.rs  writer.rs
crates/busbar/src/proto/openai_chat/tests/: tests.rs
crates/busbar/src/proto/openai_responses/: mod.rs  reader.rs  writer.rs
crates/busbar/src/proto/openai_responses/tests/: tests.rs
crates/busbar/src/proto/tests/: context_length_tests.rs  gemini_integration_tests.rs  image_source_matrix_tests.rs  same_proto_fidelity_tests.rs  stop_reason_matrix_tests.rs  stream_translate_tests.rs  tests.rs  translate_parity_golden_tests.rs
crates/busbar/src/proto/tests/golden/: req_a2o_degenerate.json  req_a2o_extras_cleared.json  req_a2o_multi_turn.json  req_a2o_plain.json  (+9 more)
crates/busbar/src/proxy/: egress.rs  hooks.rs  lazy_body.rs  mod.rs  response_body.rs  select.rs  usage.rs  wire.rs
crates/busbar/src/proxy/engine/: mod.rs  walk.rs
crates/busbar/src/proxy/tests/: auth_style_tests.rs  bedrock_eventstream_tests.rs  billing_parity_tests.rs  hook_opt_in_projection_tests.rs  hook_seam_tests.rs  ingress_indistinguishability_tests.rs  max_tokens_precedence_tests.rs  mid_stream_error_tests.rs  on_exhausted_tests.rs  ordered_walk_tests.rs  probe_guard_tests.rs  request_short_circuit_tests.rs  usage_tap_tests.rs
crates/busbar/src/store/: in_memory.rs  mod.rs
crates/busbar/src/store/tests/: tests.rs
crates/busbar/src/test_support/: mod.rs
crates/busbar/src/test_support/tests/: tests.rs
crates/busbar/src/tests/: cost_tests.rs  telemetry_tests.rs  tests.rs
crates/busbar/tests/: cli_validate.rs
crates/headroom-hook-plugin/: Cargo.toml
crates/headroom-hook-plugin/src/: compress.rs  lib.rs
crates/headroom-hook-plugin/tests/: e2e.rs
crates/hook-test-plugin/: Cargo.toml
crates/hook-test-plugin/src/: lib.rs
crates/hooks-ranking/: Cargo.toml
crates/hooks-ranking/src/: lib.rs
crates/plugin-abi/: Cargo.toml
crates/plugin-abi/src/: auth.rs  hook.rs  lib.rs
crates/plugin-loader/: Cargo.toml
crates/plugin-loader/src/: auth.rs  hook.rs  lib.rs  registry.rs  stage.rs  tarball.rs
crates/plugin-pack/: Cargo.toml
crates/plugin-pack/src/: main.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/plugin-sign/: Cargo.toml
crates/plugin-sign/src/: lib.rs
crates/store-memory/: Cargo.toml
crates/store-memory/src/: lib.rs
crates/store-postgres/: Cargo.toml
crates/store-postgres-plugin/: Cargo.toml
crates/store-postgres-plugin/src/: lib.rs
crates/store-postgres/src/: lib.rs
crates/store-redis/: Cargo.toml
crates/store-redis-plugin/: Cargo.toml
crates/store-redis-plugin/src/: lib.rs
crates/store-redis/src/: lib.rs
crates/store-sqlite/: Cargo.toml
crates/store-sqlite-plugin/: Cargo.toml
crates/store-sqlite-plugin/src/: lib.rs
crates/store-sqlite/src/: lib.rs
crates/webrequest-hook-plugin/: Cargo.toml
crates/webrequest-hook-plugin/src/: lib.rs  net_guard.rs
crates/webrequest-hook-plugin/tests/: e2e.rs
examples/compression-gate/rust-hook/: Cargo.toml
examples/compression-gate/rust-hook/src/: main.rs
examples/smart-router/rust-hook/: Cargo.toml
examples/smart-router/rust-hook/src/: main.rs
(+401 files in other folders)
