[package]
name = "busbar"
version = "1.0.0-rc.4"
edition = "2021"
# Effective MSRV: governance.rs uses `u32::is_multiple_of` (stabilized in Rust 1.87), and clippy's
# `manual_is_multiple_of` lint rewrites `% N == 0` back to it, so 1.87 is the genuine minimum. Declare
# it so a build on an older toolchain fails fast with a clear message instead of a cryptic
# "method not found", and so MSRV-aware tooling resolves compatible deps.
rust-version = "1.87"
description = "Native-protocol LLM gateway: lossless cross-protocol translation, weighted pools, per-(pool,lane) circuit breaking, and governance — in one static Rust binary."
license = "AGPL-3.0-or-later"

[[bin]]
name = "busbar"
path = "src/main.rs"

[dependencies]
axum = "0.7"
# Only the subsystems busbar actually touches: the multi-thread runtime (#[tokio::main],
# spawn/JoinHandle), macros (main/test), net (TcpListener), time (sleep/interval), sync
# (Semaphore/OwnedSemaphorePermit), and signal (graceful-shutdown ctrl_c/SIGTERM, so OTLP spans
# flush on exit). The "full" meta-feature additionally pulls fs/process/io-util/io-std/test-util —
# none referenced in src/ — so it is dropped to shrink the request-path binary's compile + attack
# surface.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `serde_yaml` (dtolnay) is archived/deprecated — the locked 0.9 is literally `0.9.34+deprecated`
# and drags in the large `unsafe-libyaml` C transliteration. `serde_yaml_ng` is the maintained,
# API-compatible fork; the `package` rename keeps every `serde_yaml::from_str` call site unchanged.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
metrics = "0.24.6"
# busbar uses this purely as an in-process recorder: `PrometheusBuilder::new().install_recorder()`
# plus `handle.render()` (src/metrics.rs), serving the text exposition from its own axum /metrics
# admin route. The crate's `default` feature enables `http-listener` and `push-gateway`, which drag
# in hyper/hyper-rustls/hyper-util/rustls (an HTTP server + push client busbar never invokes) and a
# second crypto backend (aws-lc-rs). Dropped for the same reason tokio/reqwest/otlp are hand-trimmed:
# shrink the request-path binary's compile + attack surface.
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.1"
# Pin OTLP to the HTTP/proto trace path busbar uses (`SpanExporter::builder().with_http()`). The
# default bundled client is dropped; busbar injects its OWN HTTP client via `with_http_client` (see
# observability::build_otlp) so trace export shares busbar's hyper/rustls stack and — critically —
# does NOT follow redirects (a redirect-following exporter is a runtime SSRF vector: a validated OTLP
# endpoint that 3xx-redirects to an internal/metadata target would be followed). Dropping default
# features also removes `reqwest-blocking-client` and the OTLP metrics/logs paths (busbar exports
# metrics via Prometheus, not OTLP).
#
# SINGLE CLIENT STACK: by dropping the `reqwest-rustls` feature and supplying a hyper-based
# `opentelemetry_http::HyperClient` over a hyper-rustls connector (all already in the graph for the
# axum server), the SECOND reqwest major (0.13) that the bundled OTLP client used to pull is gone —
# `cargo tree -d` no longer lists a duplicate reqwest. The request path's reqwest 0.12 is the only
# reqwest major.
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = [
    "trace",
    "http-proto",
] }
opentelemetry-http = { version = "0.32.0", default-features = false, features = [
    "hyper",
] }
# HTTPS connector for the OTLP HyperClient (rustls, http/1.1). Already in the graph via the server
# stack; named directly so build_otlp can construct a redirect-free TLS client.
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "ring",
    "webpki-tokio",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-opentelemetry = "0.33.0"
sha2 = "0.11.0"
hmac = "0.13.0"
hex = "0.4.3"
rusqlite = { version = "0.40.0", features = ["bundled"] }
getrandom = "0.2"
# CRC32 for the AWS `application/vnd.amazon.eventstream` encoder (Bedrock ingress streaming): AWS
# SDK clients validate both the prelude and message CRC32 on every frame, so the encoder needs a
# correct, fast CRC32. `crc32fast` is small, dependency-light, and the de-facto standard.
crc32fast = "1"

[dev-dependencies]
# In-crate #[cfg(test)] harness needs reqwest's json feature + axum http1 server.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
axum = { version = "0.7", features = ["http1"] }
http-body-util = "0.1"
futures = "0.3"
bytes = "1"

[profile.release]
# Tuned for the shipped "deploy-and-done" binary: max optimization and smallest size,
# at the cost of slower release compiles (fine — releases are built in CI, not in the loop).
opt-level = 3        # full speed (was throttled to 2)
lto = "fat"          # whole-program inlining across crates: faster hot path + smaller binary
codegen-units = 1    # let LTO optimize across the whole crate graph (best codegen, smaller output)
strip = true         # strip symbols from the shipped binary (much smaller; set RUST_BACKTRACE aside)
# panic is left at the default `unwind` ON PURPOSE: a panic in one request task must unwind that
# task, not abort the whole gateway. `panic = "abort"` would trade per-request isolation for a
# little size — the wrong trade for a service in the request path.
