[workspace]
resolver = "2"
members = [
    "crates/busbar",
    "crates/api",
    "crates/auth-tokens",
    "crates/auth-admin-tokens",
    "crates/hooks-ranking",
]

[profile.release]
# Tuned for the shipped "deploy-and-done" binary: max optimization and smallest size,
# at the cost of slower release compiles (fine — releases are built in CI, not in the loop).
opt-level = "s"      # optimize for size: ~24% smaller binary (10.9->8.3MB stripped) vs opt-3. Busbar is
                     # I/O-bound (provider round-trip dwarfs translation CPU), so the size win is ~free on traffic.
lto = "fat"          # whole-program inlining across crates: faster hot path + smaller binary
codegen-units = 1    # let LTO optimize across the whole crate graph (best codegen, smaller output)
strip = true         # strip symbols from the shipped binary (much smaller; set RUST_BACKTRACE aside)
# panic is left at the default `unwind` ON PURPOSE: a panic in one request task must unwind that
# task, not abort the whole gateway. `panic = "abort"` would trade per-request isolation for a
# little size — the wrong trade for a service in the request path.
