# SPDX-License-Identifier: Apache-2.0
[package]
name = "busbar-auth-oidc-plugin"
version = "1.5.0"
publish = false            # internal workspace crate; never goes to crates.io
edition = "2021"
rust-version = "1.87"
description = "The OIDC auth module as a droppable busbar plugin — a cdylib exporting the auth C ABI. Drop it in the plugins folder and add `oidc` to auth.chain with auth.modules.oidc.config."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
busbar-api = { path = "../api" }
busbar-plugin-sdk = { path = "../plugin-sdk" }
busbar-auth-oidc = { path = "../auth-oidc" }
serde_json = "1"
