[package]
name = "busbar-auth-tokens"
version = "1.3.3"
publish = false            # internal workspace crate; never goes to crates.io
edition = "2021"
rust-version = "1.87"
description = "The built-in `tokens` auth plugin for busbar: a static client-token allowlist, matched in constant time."
license = "Apache-2.0"

[dependencies]
busbar-api = { path = "../api" }
