[package]
name = "busbar-plugin-loader"
version = "1.5.0"
publish = false            # internal workspace crate; never goes to crates.io
edition = "2021"
rust-version = "1.87"
description = "Loads a busbar store backend from a dynamic library over the store C ABI (libloading). All FFI unsafe is isolated here so the engine crate keeps its forbid(unsafe_code) invariant."
license = "Apache-2.0"

[dependencies]
busbar-api = { path = "../api" }
busbar-plugin-abi = { path = "../plugin-abi" }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE: the end-to-end test loads the SQLite plugin cdylib, but a cdylib crate cannot be a Rust
# dependency (no rlib to link). The test instead locates the artifact in the target dir and skips if
# it isn't built — under `cargo test --workspace` (preflight/CI) every member cdylib is present.
