[package]
name = "busbar-plugin-sdk"
version = "1.5.0"
publish = false            # internal workspace crate; never goes to crates.io
edition = "2021"
rust-version = "1.87"
description = "SDK for writing busbar store plugins in Rust: implement the Store trait, call export_store_plugin!(ctor), build as a cdylib. Emits the extern-C glue for the busbar store ABI."
license = "Apache-2.0"

[dependencies]
busbar-api = { path = "../api" }
busbar-plugin-abi = { path = "../plugin-abi" }
serde_json = "1"

[dev-dependencies]
busbar-store-memory = { path = "../store-memory" }
