[package]
name = "busbar-plugin-sign"
version = "1.5.0"
publish = false            # internal workspace crate; never goes to crates.io
edition = "2021"
rust-version = "1.87"
description = "Plugin artifact signing + trust evaluation for busbar: ed25519 detached signatures over the artifact SHA-256, a signed manifest, and the plugins.trust posture (require_signed / allow_publishers / on_untrusted)."
license = "Apache-2.0"

[dependencies]
# Verify + sign only (no key generation here — that lives in the busbar-sign CLI, which owns the
# RNG). Keeping the engine-facing crate RNG-free minimises its dependency surface.
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
sha2 = "0.11"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
