[package]
name = "busbar-store-postgres"
version = "1.5.0"
publish = false            # internal workspace crate; never goes to crates.io
edition = "2021"
rust-version = "1.87"
description = "The Postgres backend for busbar's durable governance store — the shared, multi-node db plugin. Implements busbar_api::Store over a mutex-guarded sync postgres client."
license = "Apache-2.0"

[dependencies]
busbar-api = { path = "../api" }
postgres = "0.19"
serde_json = "1"
