# SPDX-License-Identifier: Apache-2.0
[package]
name = "busbar-store-redis-plugin"
version = "1.5.0"
publish = false
edition = "2021"
rust-version = "1.87"
description = "The Redis store as a droppable busbar plugin — a cdylib exporting the store C ABI. Drop it in the plugins folder and set governance.store: redis."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
busbar-api = { path = "../api" }
busbar-plugin-sdk = { path = "../plugin-sdk" }
busbar-store-redis = { path = "../store-redis" }
serde_json = "1"
