# SPDX-License-Identifier: Apache-2.0
[package]
name = "busbar-store-redis"
version = "1.5.0"
publish = false            # internal workspace crate; never goes to crates.io
edition = "2021"
rust-version = "1.87"
description = "The Redis backend for busbar's durable governance store — the shared, multi-node db plugin over a KV data model. Implements busbar_api::Store on a mutex-guarded synchronous redis connection."
license = "Apache-2.0"

[dependencies]
busbar-api = { path = "../api" }
# The SYNCHRONOUS redis client only (no async runtime), with rustls-backed TLS for rediss:// URLs.
# Trimming default-features keeps the dependency tree small and license-clean (redis + its deps are
# MIT/Apache/BSD — all already in deny.toml's allow-list) and avoids pulling a second async stack
# into the plugin; the rustls backend reuses the single TLS stack the workspace already pins.
redis = { version = "1", default-features = false, features = ["tls-rustls"] }
# The rediss:// TLS path builds its rustls config against the PROCESS default crypto provider; this
# crate may live inside a plugin cdylib with its own rustls static state, so it installs the ring
# provider explicitly at connect. ring only — the same single provider the workspace already pins.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde_json = "1"
