[package]
name = "busbar-store-sqlite-plugin"
version = "1.5.0"
publish = false            # internal workspace crate; never goes to crates.io
edition = "2021"
rust-version = "1.87"
description = "The SQLite store packaged as a droppable busbar plugin: a cdylib exporting the store C ABI. Drop the built library into the plugins folder and set governance.store: sqlite."
license = "Apache-2.0"

[lib]
# The droppable artifact: a C-ABI dynamic library (.so/.dll/.dylib). The static path uses the
# busbar-store-sqlite `lib` crate directly (this wrapper is dynamic-only, so its #[no_mangle]
# store symbols can never collide with another statically-linked plugin's).
crate-type = ["cdylib"]

[dependencies]
busbar-api = { path = "../api" }
busbar-store-sqlite = { path = "../store-sqlite" }
busbar-plugin-sdk = { path = "../plugin-sdk" }
serde_json = "1"
